--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -914,13 +914,16 @@ SET(CPACK_PACKAGE_VERSION_MAJOR "${OTB_VERSION_MAJOR}")
 SET(CPACK_PACKAGE_VERSION_MINOR "${OTB_VERSION_MINOR}")
 SET(CPACK_PACKAGE_VERSION_PATCH "${OTB_VERSION_PATCH}")
 
-SET(CPACK_PACKAGE_CONTACT "debian@orfeo-toolbox.org" CACHE STRING  "Debian package maintainer email")
-MARK_AS_ADVANCED(CPACK_PACKAGE_CONTACT)
+SET(CPACK_PACKAGE_CONTACT "contact@orfeo-toolbox.org" CACHE STRING  "Orfeo toolbox contact email")
 
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Description.txt")
 
+#Debian specific
+SET(DEBIAN_PACKAGE_MAINTAINER  "debian@orfeo-toolbox.org" CACHE STRING  "Debian package maintainer email")
 SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libgdal1-1.5.0 (>= 1.5.1-0), libfltk1.1 (>= 1.1.7-3), libcurl3 (>=7.15.5-1etch1), libfftw3-3 (>=3.1.2-3.1)" CACHE STRING "Debian package dependance" )
-MARK_AS_ADVANCED(CPACK_DEBIAN_PACKAGE_DEPENDS)
+SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64" CACHE STRING "arch")
+MARK_AS_ADVANCED(CPACK_DEBIAN_PACKAGE_ARCHITECTURE)
+SET(CPACK_DEBIAN_PACKAGE_NAME "libotb" CACHE STRING "Debian package name")
 
 SET(CPACK_PACKAGE_INSTALL_DIRECTORY "OrfeoToolbox-${OTB_VERSION_MAJOR}.${OTB_VERSION_MINOR}")
 
